--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,17 @@ progress[value]::-webkit-progress-value{
   display: flex;
   justify-content: space-around;
   padding: 20px;
+  transform: scale(1);
+  opacity: 1;
+  transition: all .3s linear;
+}
+.project-hide{
+  transform: scale(0);
+  opacity: 0;
+  border-radius: 100%;
+}
+.project-hide *{
+  opacity: 0;
 }
 .project-img{
   flex:40%;
